wip solace connector