@@ -1,11 +1,13 @@
 /*
- * Copyright 2024 Google.
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *   http://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,47 +15,47 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package com.google.cloud.dataflow.dce.io.solace.broker;
+package org.apache.beam.sdk.io.solace.broker;
 
-import com.google.cloud.dataflow.dce.io.solace.RetryCallableManager;
 import com.solacesystems.jcsmp.BytesXMLMessage;
 import com.solacesystems.jcsmp.FlowReceiver;
 import com.solacesystems.jcsmp.JCSMPException;
 import java.io.IOException;
 import java.io.Serializable;
-import java.util.Set;
+import org.apache.beam.sdk.io.solace.RetryCallableManager;
+import org.apache.beam.vendor.guava.v32_1_2_jre.com.google.common.collect.ImmutableSet;
 
 public class SolaceMessageReceiver implements MessageReceiver, Serializable {
 
-    public static final int DEFAULT_ADVANCE_TIMEOUT_IN_MILLIS = 100;
-    private final FlowReceiver flowReceiver;
-    private final RetryCallableManager retryCallableManager = RetryCallableManager.create();
+  public static final int DEFAULT_ADVANCE_TIMEOUT_IN_MILLIS = 100;
+  private final FlowReceiver flowReceiver;
+  private final RetryCallableManager retryCallableManager = RetryCallableManager.create();
 
-    public SolaceMessageReceiver(FlowReceiver flowReceiver) {
-        this.flowReceiver = flowReceiver;
-    }
+  public SolaceMessageReceiver(FlowReceiver flowReceiver) {
+    this.flowReceiver = flowReceiver;
+  }
 
-    @Override
-    public void start() {
-        retryCallableManager.retryCallable(
-                () -> {
-                    flowReceiver.start();
-                    return 0;
-                },
-                Set.of(JCSMPException.class));
-    }
+  @Override
+  public void start() {
+    retryCallableManager.retryCallable(
+        () -> {
+          flowReceiver.start();
+          return 0;
+        },
+        ImmutableSet.of(JCSMPException.class));
+  }
 
-    @Override
-    public boolean isClosed() {
-        return flowReceiver == null || flowReceiver.isClosed();
-    }
+  @Override
+  public boolean isClosed() {
+    return flowReceiver == null || flowReceiver.isClosed();
+  }
 
-    @Override
-    public BytesXMLMessage receive() throws IOException {
-        try {
-            return flowReceiver.receive(DEFAULT_ADVANCE_TIMEOUT_IN_MILLIS);
-        } catch (JCSMPException e) {
-            throw new IOException(e);
-        }
+  @Override
+  public BytesXMLMessage receive() throws IOException {
+    try {
+      return flowReceiver.receive(DEFAULT_ADVANCE_TIMEOUT_IN_MILLIS);
+    } catch (JCSMPException e) {
+      throw new IOException(e);
     }
+  }
 }
